--- a/render.yaml
+++ b/render.yaml
@@ -1,39 +1,45 @@
+# render.yaml
 services:
   # ── FastAPI web service ──
   - type: web
     name: sentiment-api
-    env: python
+    runtime: python
+    branch: master
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn backend.main:app --host 0.0.0.0 --port 8000
     envVars:
       - key: REDIS_URL
         fromService:
-          type: redis
+          type: keyvalue
           name: sentiment-redis
-      - key: TWITTER_BEARER_TOKEN    # mark these “Sync: false” in the UI
+      - key: TWITTER_BEARER_TOKEN
+        # sync: false  ← mark “Sync: false” in the UI after creation
       - key: NEWS_API_KEY
+        # sync: false
 
-  # ── Celery worker ──
+  # ── Celery background worker ──
   - type: worker
     name: celery-worker
-    env: python
+    runtime: python
+    branch: master
     buildCommand: pip install -r requirements.txt
     startCommand: celery -A backend.tasks.celery worker --loglevel=info
     envVars:
       - key: REDIS_URL
         fromService:
-          type: redis
+          type: keyvalue
           name: sentiment-redis
       - key: TWITTER_BEARER_TOKEN
       - key: NEWS_API_KEY
 
   # ── React static site ──
-  - type: static
+  - type: web
     name: sentiment-dashboard
-    env: static
+    runtime: static
+    branch: master
     buildCommand: npm install && npm --prefix frontend run build
     staticPublishPath: frontend/dist
 
 databases:
   - name: sentiment-redis
-    type: redis
+    type: keyvalue
