--- a/render.yaml
+++ b/render.yaml
@@ -3,43 +3,45 @@ services:
   # ── FastAPI web service ──
   - type: web
     name: sentiment-api
-    runtime: python
     branch: master
+    runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn backend.main:app --host 0.0.0.0 --port 8000
     envVars:
       - key: REDIS_URL
         fromService:
-          type: keyvalue
+          type: redis
           name: sentiment-redis
       - key: TWITTER_BEARER_TOKEN
-        # sync: false  ← mark “Sync: false” in the UI after creation
+        sync: false
       - key: NEWS_API_KEY
-        # sync: false
+        sync: false
 
   # ── Celery background worker ──
   - type: worker
     name: celery-worker
-    runtime: python
     branch: master
+    runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: celery -A backend.tasks.celery worker --loglevel=info
     envVars:
       - key: REDIS_URL
         fromService:
-          type: keyvalue
+          type: redis
           name: sentiment-redis
       - key: TWITTER_BEARER_TOKEN
+        sync: false
       - key: NEWS_API_KEY
+        sync: false
 
   # ── React static site ──
   - type: web
     name: sentiment-dashboard
-    runtime: static
     branch: master
+    runtime: static
     buildCommand: npm install && npm --prefix frontend run build
     staticPublishPath: frontend/dist
 
 databases:
   - name: sentiment-redis
-    type: keyvalue
+    type: redis
