--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,3 @@
-# render.yaml (at the root of your repo)
 services:
   # ── FastAPI API ──
   - type: web
@@ -18,6 +17,12 @@ services:
         sync: false
       - key: NEWS_API_KEY
         sync: false
+      - key: REDDIT_CLIENT_ID
+        sync: false
+      - key: REDDIT_CLIENT_SECRET
+        sync: false
+      - key: REDDIT_USER_AGENT
+        value: sentiment-app               # or sync:false if you keep it secret
 
   # ── Celery background worker ──
   - type: worker
@@ -37,6 +42,12 @@ services:
         sync: false
       - key: NEWS_API_KEY
         sync: false
+      - key: REDDIT_CLIENT_ID
+        sync: false
+      - key: REDDIT_CLIENT_SECRET
+        sync: false
+      - key: REDDIT_USER_AGENT
+        value: sentiment-app
 
   # ── Redis KV store ──
   - type: redis
@@ -50,7 +61,6 @@ services:
     runtime: static
     branch: master
 
-    # 1) grab the API host:port into an env var
     envVars:
       - key: SENTIMENT_API_HOSTPORT
         fromService:
@@ -58,13 +68,11 @@ services:
           name: sentiment-api
           property: hostport
 
-    # 2) build: inject .env then run installs/build from frontend/
     buildCommand: |
-      # write VITE_WS_URL into frontend/.env so Vite picks it up
+      # ① inject websocket base URL for Vite
       echo "VITE_WS_URL=http://$SENTIMENT_API_HOSTPORT" > frontend/.env
-
-      # install & build in the frontend folder
+      # ② install+build inside /frontend
       npm --prefix frontend install
-      npm --prefix frontend run build
+      npm --prefix frontend run build          # ← fixed
 
     staticPublishPath: frontend/dist
